--- a/manager.html
+++ b/manager.html
@@ -26,6 +26,13 @@
             border-radius: 8px;
             padding: 32px 32px 24px 32px;
         }
+        .gh-top-actions {
+            margin-bottom: 18px;
+        }
+        .gh-top-actions button, .gh-top-actions input {
+            margin-right: 8px;
+            margin-bottom: 8px;
+        }
         .gh-path {
             font-size: 1.1em;
             color: #57606a;
@@ -126,9 +133,6 @@
             font-weight: bold;
             word-break: break-all;
         }
-        .gh-fullscreen-rename {
-            margin-bottom: 18px;
-        }
         .gh-fullscreen-content {
             width: 94vw;
             min-height: 180px;
@@ -141,14 +145,69 @@
             resize: vertical;
             background: #f6f8fa;
         }
+        .gh-fullscreen-actions {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            margin-bottom: 18px;
+        }
         .gh-fullscreen-actions button {
             margin-right: 10px;
-            margin-bottom: 6px;
         }
         .gh-fullscreen a {
             font-size: 1.1em;
             color: #0969da;
             word-break: break-all;
+        }
+        /* 重命名弹窗样式 */
+        .gh-rename-bg {
+            position: fixed;
+            top:0; left:0; right:0; bottom:0;
+            background: rgba(36,41,46,0.25);
+            z-index: 10000;
+            display: none;
+            align-items: center;
+            justify-content: center;
+        }
+        .gh-rename-modal {
+            background: #fff;
+            box-shadow: 0 4px 32px #24292e66;
+            border-radius: 11px;
+            min-width: 240px;
+            max-width: 90vw;
+            min-height: 58px;
+            padding: 28px 28px 18px 28px;
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .gh-rename-close {
+            position: absolute;
+            right: 16px;
+            top: 14px;
+            font-size: 1.8em;
+            color: #24292e;
+            background: none;
+            border: none;
+            cursor: pointer;
+        }
+        .gh-rename-title {
+            font-size: 1.08em;
+            font-weight: bold;
+            margin-bottom: 12px;
+            color: #57606a;
+        }
+        .gh-rename-input {
+            width: 200px;
+            margin-bottom: 16px;
+            padding: 6px;
+            font-size: 1em;
+            border: 1px solid #eaecef;
+            border-radius: 5px;
+        }
+        .gh-rename-actions button {
+            margin-right: 10px;
         }
         @media (max-width: 600px) {
             .container { padding: 10px; }
@@ -156,6 +215,8 @@
             .gh-fullscreen { padding: 4vw 0 4vw 0; }
             .gh-fullscreen img, .gh-fullscreen video { max-width: 98vw; max-height: 60vh; }
             .gh-fullscreen-content { min-height: 100px; }
+            .gh-rename-modal { padding: 10vw 3vw 10vw 3vw; }
+            .gh-fullscreen-actions { flex-direction: column; align-items: flex-start;}
         }
     </style>
 </head>
@@ -165,6 +226,7 @@
         文件管理器 <span style="font-size:0.7em;color:#c9d1d9;margin-left:12px;">for abcdd12344/abcdd12344.github.io</span>
     </div>
     <div class="container">
+        <div class="gh-top-actions" id="ghTopActions"></div>
         <div class="gh-path" id="ghPath"></div>
         <table class="gh-table" id="ghTable">
             <thead>
@@ -176,7 +238,6 @@
             </thead>
             <tbody id="ghFiles"></tbody>
         </table>
-        <div class="gh-actions" id="ghActions"></div>
         <div class="gh-status" id="ghStatus"></div>
         <input type="file" id="ghUploadInput" style="display:none;" />
     </div>
@@ -184,7 +245,20 @@
     <div class="gh-fullscreen-bg" id="ghFullBg">
         <div class="gh-fullscreen" id="ghFullScreen">
             <button class="gh-fullscreen-close" onclick="closeFullScreen()" title="关闭">&times;</button>
+            <div class="gh-fullscreen-actions" id="ghFullTopActions"></div>
             <div id="ghFullContent"></div>
+        </div>
+    </div>
+    <!-- 重命名弹窗层 -->
+    <div class="gh-rename-bg" id="ghRenameBg">
+        <div class="gh-rename-modal" id="ghRenameModal">
+            <button class="gh-rename-close" onclick="closeRenameModal()" title="关闭重命名">&times;</button>
+            <div class="gh-rename-title" id="ghRenameTitle"></div>
+            <input class="gh-rename-input" id="ghRenameInput" type="text" value="">
+            <div class="gh-rename-actions">
+                <button onclick="doRenameFile()" class="save-btn">确定</button>
+                <button onclick="closeRenameModal()" class="del-btn">取消</button>
+            </div>
         </div>
     </div>
     <script>
@@ -193,9 +267,12 @@
     let curPath = ""; // 当前路径
     let editingFile = null;
     let fileSha = "";
-    let lastFullScreenType = ""; // "text" | "img" | "video" | "other"
+    let lastFullScreenType = "";
     let lastFullScreenPath = "";
     let lastFullScreenContent = "";
+    let renameOldPath = "";
+    let renameOldSha = "";
+    let renameType = "";
 
     // token相关
     async function fetchTokenSuffix() {
@@ -225,7 +302,7 @@
             (curPath ? curPath : '/');
     }
     function showActions() {
-        document.getElementById("ghActions").innerHTML = `
+        document.getElementById("ghTopActions").innerHTML = `
             <button onclick="showNewFile()" class="save-btn">新建文件</button>
             <button onclick="showNewDir()" class="save-btn">新建目录</button>
             <button onclick="showUploadFile()" class="save-btn">上传文件</button>
@@ -261,8 +338,11 @@
                 </td>
                 <td>
                 ${f.type === "file" ? `
+                    <button onclick="showRenameModal('${f.path}','${f.sha}','file')" class="save-btn">重命名</button>
                     <button onclick="delFile('${f.path}','${f.sha}')" class="del-btn">删除</button>
-                ` : ""}
+                ` : `
+                    <button onclick="showRenameModal('${f.path}','','dir')" class="save-btn">重命名</button>
+                `}
                 </td>
             </tr>`;
         }
@@ -276,19 +356,23 @@
         loadFiles(curPath);
     }
 
-    // 全屏弹窗页面（预览或编辑和重命名）
+    // 全屏弹窗页面（预览或编辑）
     window.openFullScreen = async function(path, sha) {
         editingFile = path;
         fileSha = sha;
         lastFullScreenPath = path;
         document.getElementById("ghFullBg").style.display = "flex";
+        // 顶部 actions，仅文本文件有
         const ext = path.split('.').pop().toLowerCase();
+        let topActions = "";
+        if (["md","txt","json","js","ts","css","html","py","java","c","cpp","go","rs","php","yaml","yml"].includes(ext) || ext.length <= 5) {
+            topActions = `<button onclick="saveFullScreenEdit()" class="save-btn">保存</button>
+                <button onclick="closeFullScreen()" class="del-btn">取消</button>`;
+        }
+        document.getElementById("ghFullTopActions").innerHTML = topActions;
+
         const rawUrl = `https://raw.githubusercontent.com/${owner}/${repo}/main/${path}`;
-        let contentHtml = `<div class="gh-fullscreen-filename">${path}</div>
-            <div class="gh-fullscreen-rename">
-                <input id="renameInput" type="text" value="${getFileName(path)}" style="width:220px;" />
-                <button onclick="renameFile()" class="save-btn">重命名</button>
-            </div>`;
+        let contentHtml = `<div class="gh-fullscreen-filename">${path}</div>`;
         if (["png","jpg","jpeg","gif","bmp","svg","webp"].includes(ext)) {
             lastFullScreenType = "img";
             contentHtml += `<img src="${rawUrl}" alt="${path}">`;
@@ -297,11 +381,7 @@
             contentHtml += `<video src="${rawUrl}" controls></video>`;
         } else if (["md","txt","json","js","ts","css","html","py","java","c","cpp","go","rs","php","yaml","yml"].includes(ext) || ext.length <= 5) {
             lastFullScreenType = "text";
-            contentHtml += `<textarea class="gh-fullscreen-content" id="ghFullscreenEdit"></textarea>
-            <div class="gh-fullscreen-actions">
-                <button onclick="saveFullScreenEdit()" class="save-btn">保存</button>
-                <button onclick="closeFullScreen()" class="del-btn">取消</button>
-            </div>`;
+            contentHtml += `<textarea class="gh-fullscreen-content" id="ghFullscreenEdit"></textarea>`;
         } else {
             lastFullScreenType = "other";
             contentHtml += `<a href="${rawUrl}" target="_blank">下载或在新窗口查看文件</a>`;
@@ -331,6 +411,7 @@
         lastFullScreenContent = "";
         document.getElementById("ghFullBg").style.display = "none";
         document.getElementById("ghFullContent").innerHTML = "";
+        document.getElementById("ghFullTopActions").innerHTML = "";
     }
     document.getElementById("ghFullBg").onclick = function(e) {
         if (e.target === this) closeFullScreen();
@@ -373,26 +454,91 @@
         }
     }
 
-    // 重命名文件
-    window.renameFile = async function() {
-        const input = document.getElementById("renameInput");
-        const newName = input.value.trim();
-        if (!newName || !editingFile) return showStatus("请输入新文件名", "#cf222e");
-        if (getFileName(editingFile) === newName) return showStatus("文件名未修改", "#cf222e");
-        const newPath = getParentPath(editingFile) ? getParentPath(editingFile) + '/' + newName : newName;
+    // 重命名弹窗
+    window.showRenameModal = function(path, sha, type) {
+        renameOldPath = path;
+        renameOldSha = sha;
+        renameType = type;
+        document.getElementById("ghRenameBg").style.display = "flex";
+        document.getElementById("ghRenameTitle").textContent = `重命名${type === "dir" ? "目录" : "文件"}: ${path}`;
+        document.getElementById("ghRenameInput").value = getFileName(path);
+    }
+    window.closeRenameModal = function() {
+        renameOldPath = "";
+        renameOldSha = "";
+        renameType = "";
+        document.getElementById("ghRenameBg").style.display = "none";
+    }
+    document.getElementById("ghRenameBg").onclick = function(e) {
+        if (e.target === this) closeRenameModal();
+    }
+    window.doRenameFile = async function() {
+        const newName = document.getElementById("ghRenameInput").value.trim();
+        if (!newName || !renameOldPath) return showStatus("请输入新文件名", "#cf222e");
+        if (getFileName(renameOldPath) === newName) return showStatus("文件名未修改", "#cf222e");
+        const newPath = getParentPath(renameOldPath) ? getParentPath(renameOldPath) + '/' + newName : newName;
         token = localStorage.getItem("gh_token") || "";
         if (!token) {
             token = await getFullToken();
             localStorage.setItem("gh_token", token);
         }
         showStatus("正在重命名...", "#0969da");
-        // 获取原文件内容（如果是文本编辑已加载，优先用已加载内容）
-        let base64Content = null;
-        if (lastFullScreenType === "text" && lastFullScreenContent !== "") {
-            base64Content = btoa(unescape(encodeURIComponent(document.getElementById("ghFullscreenEdit").value)));
+        if (renameType === "dir") {
+            // 目录重命名实际上是移动目录下所有文件
+            const api = `https://api.github.com/repos/${owner}/${repo}/contents/${renameOldPath}`;
+            const res = await fetch(api);
+            if (!res.ok) return showStatus("无法获取目录内容", "#cf222e");
+            let items = await res.json();
+            if (!Array.isArray(items)) items = [items];
+            let ok = true;
+            for (const item of items) {
+                const subNewPath = newPath + "/" + getFileName(item.path);
+                // 获取内容
+                let data = item;
+                if (!data.content) {
+                    const r = await fetch(`https://api.github.com/repos/${owner}/${repo}/contents/${item.path}`);
+                    if (!r.ok) continue;
+                    data = await r.json();
+                }
+                const base64Content = data.content ? data.content.replace(/\n/g, "") : "";
+                const createUrl = `https://api.github.com/repos/${owner}/${repo}/contents/${subNewPath}`;
+                const createRes = await fetch(createUrl, {
+                    method: "PUT",
+                    headers: {
+                        "Authorization": "token " + token,
+                        "Accept": "application/vnd.github+json"
+                    },
+                    body: JSON.stringify({
+                        message: `Rename (move) ${subNewPath} from ${item.path} via manager.html`,
+                        content: base64Content
+                    })
+                });
+                if (!createRes.ok) { ok = false; break; }
+                // 删除原文件
+                const deleteUrl = `https://api.github.com/repos/${owner}/${repo}/contents/${item.path}`;
+                await fetch(deleteUrl, {
+                    method: "DELETE",
+                    headers: {
+                        "Authorization": "token " + token,
+                        "Accept": "application/vnd.github+json"
+                    },
+                    body: JSON.stringify({
+                        message: `Delete ${item.path} after renaming to ${subNewPath} via manager.html`,
+                        sha: item.sha
+                    })
+                });
+            }
+            if (ok) {
+                showStatus("目录重命名成功！");
+                loadFiles(curPath);
+                closeRenameModal();
+            } else {
+                showStatus("目录重命名失败", "#cf222e");
+            }
         } else {
-            // 获取当前文件内容
-            const url = `https://api.github.com/repos/${owner}/${repo}/contents/${editingFile}?t=${Date.now()}`;
+            // 文件重命名
+            let base64Content = null;
+            const url = `https://api.github.com/repos/${owner}/${repo}/contents/${renameOldPath}?t=${Date.now()}`;
             const res = await fetch(url);
             if (!res.ok) {
                 showStatus("获取原文件内容失败", "#cf222e");
@@ -400,45 +546,44 @@
             }
             const data = await res.json();
             base64Content = data.content.replace(/\n/g, "");
-        }
-        // 创建新文件
-        const createUrl = `https://api.github.com/repos/${owner}/${repo}/contents/${newPath}`;
-        const createRes = await fetch(createUrl, {
-            method: "PUT",
-            headers: {
-                "Authorization": "token " + token,
-                "Accept": "application/vnd.github+json"
-            },
-            body: JSON.stringify({
-                message: `Rename (create) ${newPath} from ${editingFile} via manager.html`,
-                content: base64Content
-            })
-        });
-        const createData = await createRes.json();
-        if (createRes.ok) {
-            // 删除原文件
-            const deleteUrl = `https://api.github.com/repos/${owner}/${repo}/contents/${editingFile}`;
-            const deleteRes = await fetch(deleteUrl, {
-                method: "DELETE",
+            const createUrl = `https://api.github.com/repos/${owner}/${repo}/contents/${newPath}`;
+            const createRes = await fetch(createUrl, {
+                method: "PUT",
                 headers: {
                     "Authorization": "token " + token,
                     "Accept": "application/vnd.github+json"
                 },
                 body: JSON.stringify({
-                    message: `Rename (delete) ${editingFile} after renaming to ${newPath} via manager.html`,
-                    sha: fileSha
+                    message: `Rename (create) ${newPath} from ${renameOldPath} via manager.html`,
+                    content: base64Content
                 })
             });
-            const deleteData = await deleteRes.json();
-            if (deleteRes.ok) {
-                showStatus("重命名成功！");
-                loadFiles(curPath);
-                window.closeFullScreen();
+            const createData = await createRes.json();
+            if (createRes.ok) {
+                // 删除原文件
+                const deleteUrl = `https://api.github.com/repos/${owner}/${repo}/contents/${renameOldPath}`;
+                const deleteRes = await fetch(deleteUrl, {
+                    method: "DELETE",
+                    headers: {
+                        "Authorization": "token " + token,
+                        "Accept": "application/vnd.github+json"
+                    },
+                    body: JSON.stringify({
+                        message: `Rename (delete) ${renameOldPath} after renaming to ${newPath} via manager.html`,
+                        sha: renameOldSha
+                    })
+                });
+                const deleteData = await deleteRes.json();
+                if (deleteRes.ok) {
+                    showStatus("重命名成功！");
+                    loadFiles(curPath);
+                    closeRenameModal();
+                } else {
+                    showStatus("重命名后删除原文件失败: " + (deleteData.message || ""), "#cf222e");
+                }
             } else {
-                showStatus("重命名后删除原文件失败: " + (deleteData.message || ""), "#cf222e");
+                showStatus("重命名失败: " + (createData.message || ""), "#cf222e");
             }
-        } else {
-            showStatus("重命名失败: " + (createData.message || ""), "#cf222e");
         }
     };
 
@@ -533,14 +678,14 @@
     };
 
     window.showNewFile = function() {
-        document.getElementById("ghActions").innerHTML = `
+        document.getElementById("ghTopActions").innerHTML = `
             <input id="newFileName" type="text" style="width:180px;" placeholder="文件名.txt">
             <button onclick="createFile()" class="save-btn">创建</button>
             <button onclick="cancelEdit()" class="del-btn">取消</button>
         `;
     }
     window.showNewDir = function() {
-        document.getElementById("ghActions").innerHTML = `
+        document.getElementById("ghTopActions").innerHTML = `
             <input id="newDirName" type="text" style="width:180px;" placeholder="目录名">
             <button onclick="createDir()" class="save-btn">创建</button>
             <button onclick="cancelEdit()" class="del-btn">取消</button>
